cdda: Support libcdio 0.84 with changed API

following CDIO changeset
http://git.savannah.gnu.org/gitweb/?p=libcdio.git;a=commitdiff;h=abe5b8429573c9ac796c274c7abe7f76ef52dc76

https://bugzilla.gnome.org/show_bug.cgi?id=678257